@@ -26,6 +26,7 @@ Improved Sprite Viewer: Save sprite, TBBlue sprite viewer, inverse sprite
 Improved write-mapped-memory remote command to allow up to 64kb
 Improved a bit menu drawing: now colours are greyscaled when multitask disabled
 Improved stdout driver. Now can show ansi colours
+Improved messages windows. Can now find text using f and n
 Fixed turbo mode and breakpoints. Breakpoints were disabled when changing turbo mode
 Fixed latency problems on all audio drivers
 Fixed AY sound bugs when volume levels where > 15
